# research

./: .gitignore  .gitmodules  Async.md  Changes-To-Overloading.md  FeatureOverhaul.md  Generic-Type-Inference.md  README.md  all-opt-macro.md  cli.md  dot-notation  expression.syntax  expression_vs_types  fibo.sol  generator-yield-desugar.md  generic-advanced.sol  generic.sol  go-interop.md  graphs.sol  idea-14.09.2020.md  identifiers.md  interfaces-traits.md  json-like-data  literal parsing  lookupdoodle.clj  macro.description  notes.md  open-question.tyxt  pipe.md  semi-static  solar-syntax.vim  string.sol  what_about_this.simple
Artwork/: orthographic-shapes-cube.blend  orthographic-shapes-cube.blend1
alt-parser/: Cargo.toml
compiler-design/: fileinfo.yaml
discussion/: asmfun.asm  chars-and-strings.sol  closures-2021-03-05.sol  comment.sol  discussion generic.sol  each-2021.03-05.sol  expression_structs.sol  expression_vs_types.sol  fibo.sol  generic-advanced.sol  generic.sol  generics-writing.sol  graphs.sol  huffman.sol  keywords  list-comprehension.py  memory-management  (+9 more)
parser/: Cargo.toml  README.md  TODO.md
parser/src/: generics.rs  identifier.rs  identifiers.rs  keyword.rs  lib.rs  located.rs  parse.rs  structs.rs  token.rs  types.rs  unused.rs  util.rs
parser/src/expression/: expression.rs  mod.rs  string.rs  value.rs
parser/src/identifier/: keyword.rs  keywords.rs  mod.rs
parser/src/util/: characters.rs  mod.rs
solar-ast/: .gitignore  Cargo.toml  README.md
solar-ast/src/: ast.rs  error.rs  lib.rs  parse.rs  util.rs
solar-ast/src/ast/: body.rs  expr.rs  identifier.rs  import.rs  keywords.rs  mod.rs  type_signature.rs
solar-ast/src/ast/expr/: block.rs  full.rs  literal.rs  mod.rs  string.rs  when.rs
solar-parser/: Cargo.toml
solar-parser/src/: identifiers.rs  lib.rs  parse.rs  util.rs
solar-tokenizer/: Cargo.toml
solar-tokenizer/src/: lib.rs
(+97 files in other folders)
