[package]
name = "solar-ast"
version = "0.1.0"
authors = ["Nils Martel <nilsmartel@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solar-tokenizer = { path = "../solar-tokenizer" }
nom = "6.1.2"                # A byte-oriented, zero-copy, parser combinators library
