[package]
name = "solar-parser"
version = "0.1.0"
authors = ["Nils Martel <nils.martel@graphmasters.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom_locate = "2.1.0"         # A special input type for nom to locate tokens

[dependencies.nom]
version = "5.1.2"          # A byte-oriented, zero-copy, parser combinators library
features = ["regexp", "lexical"]
