[package]
name = "solar-tokenizer"
version = "0.1.0"
authors = ["Nils Martel <nilsmartel@yahoo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"                 # Create ridiculously fast Lexers
logos-derive = "0.12.0"          # Create ridiculously fast Lexers
